# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#
Version 1.5
Released: xx/xx/2011

+Fix parsing issue in Python tag generator for when line continuation characters
are encountered.

#-----------------------------------------------------------------------------#
Version 1.4
Released: 10/01/2011

+Workaround focus issue in wxPython 2.9 TreeCtrl
+Major improvements and fixes to Python scope handling.

#-----------------------------------------------------------------------------#
Version 1.3
Released: 05/14/2011

+Add ed_msg callback interface "CodeBrowser.ContextMenu".
+Use EdThreadPool for running parsing jobs.

#-----------------------------------------------------------------------------#

Version 1.2
Released: 

+Add configuration panel to plugin manager dialog
+Add outline sorting options to sort either alphabetically or by line number
+Fix bug in not refreshing tree when activated via toggle pane function in Editra.

#-----------------------------------------------------------------------------#

Version 1.1
Released: 06/05/2010

+Fix display of C function names that had * or & prefixed to them
+Major improvement to Tcl/Tk support. Supports SNIT syntax, packages, variables.
+Expanded support for CSS (still needs work though)

#-----------------------------------------------------------------------------#

Version 1.0
Released: 03/15/2010

+Add support for Java (patch from Eric Gaudet)
+Add support for Diff files (patch from Eric Gaudet)

#-----------------------------------------------------------------------------#

Version 0.9
Released: 06/14/2009

New:
+Synchronizes tree view with the current position in the document.
(patch from Igor Dejanovic)
+Add support for XText. (patch from Igor Dejanovic)

Bug Fixes:
+Fix incorrect string handling in php parser.

#-----------------------------------------------------------------------------#

Version 0.8