@@ -8,6 +8,8 @@ Released: xx/xx/2011
 
 +Fix parsing issue in Python tag generator for when line continuation characters
 are encountered.
++Fix case the could lead to infinite recursion in the display of XML/HTML due
+to issue in XML parser.
 
 #-----------------------------------------------------------------------------#
 Version 1.4
